--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= locals.title ? locals.title : 'Foodies' %></title>
     <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico">  
-    <link rel="stylesheet" href="/static/style.css"> 
-                    
+    <link rel="stylesheet" href="/static/login.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+               
 
 
 
@@ -34,11 +35,11 @@
 
     <form action="/login" method="POST">
         <div class="form-group">
-            <input type="email" placeholder="email" class="form-control" value="kodego@test.com" name="email">
+            <input type="email" placeholder="email" class="form-control" value="Tos@test.com" name="email">
         </div>
         <br>
         <div class="form-group">
-            <input type="password" placeholder="password" class="form-control" value="12345678" name="password">
+            <input type="password" placeholder="password" class="form-control" value="Tos12345" name="password">
         </div>
         <br>
          <button type="submit" class="btn btn-success rounded-pill">Submit</button>
