update login css

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= locals.title ? locals.title : 'Foodies' %></title>
     <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico">  
-    <link rel="stylesheet" href="/static/style.css"> 
+    <link rel="stylesheet" href="/static/login.css"> 
                     
 
 
 
 </head>
 <body>
+<!--navbar starts-->
 
+<!--navbar ends-->
 
 
 <!-----login section starts-->
