--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
     
 <!-- navbar area -->
     <div id="navbar">
-        <img src="/static/assets/logo.png" alt="Logo" style="width: 70px; height: 40px;">
+        <img src="/static/assets/logo.png" alt="Logo" style="width: 80px; height: 50px">
         <a href="/home.ejs">
             <div class="top-logo">Foodies App
             </div>
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="header">
                     <div class="title">
-                        Fresh | Hygienic | Delicious | Healthy
+                        GOOD FOOD | GOOD LIFE
                     </div>
                 </div>
                 <div class="" id="search-bar">
