--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
     
 <!-- navbar area -->
     <div id="navbar">
-        <img src="/static/assets/logo.png" alt="Logo" style="width: 70px; height: 40px;">
+        <img src="/static/assets/logo.png" alt="Logo" style="width: 100px; height: 40px;">
         <a href="/home.ejs">
             <div class="top-logo">Foodies App
             </div>
@@ -37,7 +37,7 @@
 
         <div class="text-center center-div mt-5" id="login" onmouseenter="showLogoutLink()" onmouseleave="hideLogoutLink()">
             <div class="container w-25 border py-5 mt-5">
-              <h5><%= locals.user ? user : 'No email found' %></h5>
+              <h5><%= locals.user ? user : 'My Account' %></h5>
               <a href="/login" id="logout-link" class="hidden">Logout</a>
             </div>
           </div>
