--- a/public/style.css
+++ b/public/style.css
@@ -58,15 +58,13 @@ body {
 }
 
 .top-logo {
-    width: 120px;
-    height: 40px;
+    height: 50px;
+    margin-left: 500px;
     display: flex;
-    align-items: flex-start;
     font-size: 1.2rem;
-    justify-content: center;
     color: hsl(234, 39%, 85%);
     text-shadow: 2px -1px 6px hsl(234, 39%, 85%);
-    flex-direction: column;
+    flex-direction: row;
 }
 /* Style for the logo image */
 img {
