--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ a:visited{
 }
 
 body {
-    background-color: hsl(37, 69%, 36%);
+    background-color: hsl(48, 72%, 31%);
     display: flex;
     justify-content: center;
 }
@@ -49,7 +49,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 45px;
+    height: 50px;
     box-shadow: 2px 2px 30px -10px hsl(235, 24%, 19%);
     background-color: rgb(17, 32, 61);
     /* Z 1 ensure that it will remain on top whos zindex value less then 1 */
@@ -57,67 +57,74 @@ body {
     justify-content: space-between;
 }
 
+  
 .top-logo {
-    height: 50px;
-    margin-left: 500px;
+    width: 120px;
+    height: 40px;
     display: flex;
+    align-items: flex-start;
     font-size: 1.2rem;
-    color: hsl(234, 39%, 85%);
-    text-shadow: 2px -1px 6px hsl(234, 39%, 85%);
-    flex-direction: row;
-}
-/* Style for the logo image */
-img {
-    width: 100px;
-    height: 40px; 
-    margin-left: 3px;
-    margin-top: 2px;
-  }
- 
-  /* Style for the top logo */
-.top-logo {
-    font-size: 20px; 
-    color: #c8bfbf; 
-    margin-left: -600px; 
-  }
-  
-/* Style for the login container */
-#login {
-    text-align: center;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    color: azure;
-    margin-top: -150px;
-    margin-left: 700px;
-  }
-  
-  /* Style for the logout link */
-#logout-link {
-    text-decoration: none;
-    color: #cb9109eb;
-    font-weight: bold;
-  }
+    color: aqua;
+    text-shadow: 2px -1px 6px hsl(200, 5%, 89%);
+    flex-direction: column;
+}
 
-  /* Hide the logout link by default */
-#logout-link.hidden {
+/* Initially hide the logout button */
+#login .btn.btn-danger {
     display: none;
   }
   
-  /* Show the logout link on hover */
-  #login:hover #logout-link {
-    display: inline; 
+  /* Show the logout button on container hover */
+  #login:hover .btn.btn-danger {
+    display: inline-block;
+  }
+  
+  /* Center the content horizontally and add margin-top */
+  #login.text-center.center-div {
+    margin-top: -120px;
+    margin-right: 100px;
+    color: aqua;
+
+  }
+  
+
+  /* Style the welcome message */
+  #login .wrapper h6 {
+    font-size: 18px;
+
+  }
+  
+  /* Style the logout button */
+  #login .btn.btn-danger {
+    color: #f90b0b;
+    cursor: pointer;
   }
 
-.side-drawer {
+  
+  /* Position the login element on the right side of the navbar */
+  #login {
+    position: absolute;
+    right: 0;
+    top: -20px;
+    margin-top: 0px;
+    margin-right: 0px;
+  }
+  
+  
+  .side-drawer {
+    margin-right: -90px;
+    margin-top: -30px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-direction: row;
-}
+    cursor: auto; /* or cursor: default; */
+  }
+  
 
 #total-counter {
-    color: rgb(226, 161, 12);
+    color: rgb(238, 231, 231);
     position: relative;
     left: -16px;
     top: -10px;
@@ -618,94 +625,4 @@ img {
     text-decoration: underline;
     cursor: pointer;
     color: hsl(0, 0%, 96%)
-}
-
-/* Base styles for larger screens */
-body {
-    background-color: hsl(37, 69%, 36%);
-    display: flex;
-    justify-content: center;
-}
-
-#navbar {
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 45px;
-    box-shadow: 2px 2px 30px -10px hsl(235, 24%, 19%);
-    background-color: rgb(17, 32, 61);
-    /* Z 1 ensure that it will remain on top whos zindex value less then 1 */
-    z-index: 1;
-    justify-content: space-between;
-}
-
-/* Style for the logo image */
-img {
-    width: 100px;
-    height: 40px; 
-    margin-left: 3px;
-    margin-top: 2px;
-}
-
-/* Style for the top logo */
-.top-logo {
-    font-size: 20px; 
-    color: #c8bfbf; 
-    margin-left: -130px; 
-}
-
-/* Mobile-specific styles */
-@media (max-width: 768px) {
-    /* Adjust styles for mobile screens here */
-    #navbar {
-        flex-direction: column;
-        height: auto;
-        align-items: center;
-    }
-
-    img {
-        width: 80px; /* Adjust image width for mobile */
-        height: 32px; /* Adjust image height for mobile */
-        margin-left: 0; /* Remove margin for mobile */
-        margin-top: 0; /* Remove margin for mobile */
-    }
-
-    .top-logo {
-        font-size: 18px; /* Adjust font size for mobile */
-        margin-left: 0; /* Remove margin for mobile */
-        margin-top: 5px; /* Adjust margin-top for mobile */
-    }
-
-    /* Add more mobile-specific styles as needed */
-}
-
-/* Style for the login container */
-#login {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: azure;
-    margin-top: -150px;
-    margin-left: 300px;
-}
-
-/* Style for the logout link */
-#logout-link {
-    text-decoration: none;
-    color: #cb9109eb;
-    font-weight: bold;
-}
-
-/* Hide the logout link by default */
-#logout-link.hidden {
-    display: none;
-}
-
-/* Show the logout link on hover */
-#login:hover #logout-link {
-    display: inline; 
 }
