--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,11 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet" />
-    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Meal App</title>
-    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/e6f12e5790.js" crossorigin="anonymous"></script>
 
 </head>
@@ -37,9 +33,16 @@
 
         <div class="text-center center-div mt-5" id="login" onmouseenter="showLogoutLink()" onmouseleave="hideLogoutLink()">
             <div class="container w-25 border py-5 mt-5">
-              <h5><%= locals.user ? user : 'My Account' %></h5>
-              <a href="/login" id="logout-link" class="hidden">Logout</a>
-            </div>
+                    <div class="home">
+                        <div class="wrapper">
+                            <h6>Welcome! <%= locals.user?user:'No email found'  %></h6>
+                        </div>
+                    </div>
+                  <a href="/logout">
+                <form action="/logout" method="POST">
+                    <button action="/logout" method="POST" class="btn btn-danger">Logout</button>
+                </form>
+            </a>
           </div>
           
 
