--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,82 +7,119 @@
     <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico">  
     <link rel="stylesheet" href="/static/login.css"> 
 
+     <!-- bootstrap css -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+     <!-- unicons css -->
+     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+
 </head>
 <body>
-<!--navbar starts-->
 
-<!--navbar ends-->
 
 
 <!-----login section starts-->
-<div class="text-center center-div" id="login">
-    <div class="container w-25 border py-5">
-        <div class="title pb-5">
-           <h2 class="font-weight-bold">
-            Foodies App
-           </h2>
-            <span class="label">
-            Login for the existing user
-        </span>
-        <% if(locals.logout) {%>
-            <div class="alert alert-success text-center">
-                <%= logout%>
-            </div>
-        <%}%>
-        </div>
 
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <input type="email" placeholder="email" class="form-control" value="Tos@test.com" name="email">
-        </div>
-        <br>
-        <div class="form-group">
-            <input type="password" placeholder="password" class="form-control" value="Tos12345" name="password">
-        </div>
-        <br>
-         <button type="submit" class="btn btn-success rounded-pill">Submit</button>
+
+<div class="container">
+    <div class="forms">
        
-    </form>
-    <br>
-     <% if(locals.errors) {%>
-            <div class="alert alert-danger text-center">
-                <%= errors%>
+
+        <!-- Login Form -->
+        <div class="form login">
+            <span class="title">Login for the existing user</span>
+
+            <form action="/login" method="POST">
+                <div class="input-field">
+                    <input type="email" placeholder="Enter your email" name="email">
+                <i class="uil uil-envelope icon"></i>
+                </div>
+                <div class="input-field">
+                    <input type="password" class="password" placeholder="Enter your password" name="password">
+           
+                <i class="uil uil-eye-slash showHidePw"></i>
+                </div>
+
+                <div class="checkbox-text">
+                    <div class="checkbox-content">
+                        <input type="checkbox" id="logCheck">
+                        <label for="logCheck" class="text">Remember me</label>
+                    </div>
+
+                    <a href="#" class="text">Forgot password?</a>
+                </div>
+
+                <div class="input-field button">
+                    <input type="submit" value="Login">
+                </div>
+
+            </form>
+
+            <div class="login-signup">
+                <span class="text">Don't have an account?
+                    <a href="#" class="text signup-link">Signup now</a>
+                </span>
             </div>
-        <%}%>
-         <% if(locals.isInvalid) {%>
-            <div class="alert alert-danger text-center">
-                <%= isInvalid%>
+
+            <div class="alert">
+                <% if(locals.errors) {%>
+                       <div class="alert alert-danger text-center">
+                           <%= errors%>
+                       </div>
+                   <%}%>
+                    <% if(locals.isInvalid) {%>
+                       <div class="alert alert-danger text-center">
+                           <%= isInvalid%>
+                       </div>
+                   <%}%>
+                <% if(locals.logout) {%>
+                       <div class="alert alert-success text-center">
+                           <%= logout%>
+                       </div>
+                <%}%>
             </div>
-        <%}%>
-      </div>
+
+        </div>
+
+        <!-- Registration Form -->
+        <div class="form signup">
+            <span class="title">Registration</span>
+
+            <form action="#">
+                <div class="input-field">
+                    <input type="text" placeholder="Enter your name" required>
+                <i class="uil uil-user icon"></i>
+                </div>
+                <div class="input-field">
+                    <input type="text" placeholder="Enter your email" required>
+                <i class="uil uil-envelope icon"></i>
+                </div>
+                <div class="input-field">
+                    <input type="password" class="password" placeholder="Create a password" required>
+                <i class="uil uil-lock icon"></i>
+                </div>
+                <div class="input-field">
+                    <input type="password" class="password" placeholder="Confirm your password" required>
+                <i class="uil uil-lock icon"></i>
+                <i class="uil uil-eye-slash showHidePw"></i>
+                </div>
+                <div class="input-field button">
+                    <input type="button" value="Submit">
+                </div>
+
+            </form>
+
+            <div class="login-signup">
+                <span class="text">Already have an account?
+                    <a href="#" class="text login-link">Login here</a>
+                </span>
+            </div>
+
+        </div>
+    </div>
 </div>
-<!-----login section ends-->
-
-<footer class="footer">
-   
-    <div class="credit">&copy; copyright @ 2023 by <span>TOS</span> | all rights reserved!</div>
-</footer>
-
-
-
- <!--custom js file link-->
- <script>
-    // Function to toggle password visibility
-    function togglePassword(inputId) {
-        const passwordInput = document.getElementById(inputId);
-        const passwordIcon = document.getElementById(inputId + "-icon");
-
-        if (passwordInput.type === "password") {
-            passwordInput.type = "text";
-            passwordIcon.innerHTML = '<i class="fas fa-eye-slash"></i>';
-        } else {
-            passwordInput.type = "password";
-            passwordIcon.innerHTML = '<i class="fas fa-eye"></i>';
-        }
-    }
-</script>
 
 <script src="/static/login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
