--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ a:visited{
 }
 
 body {
-    background-color: hsl(48, 72%, 31%);
+    background-color: #D1CFD5;
     display: flex;
     justify-content: center;
 }
@@ -51,7 +51,8 @@ body {
     width: 100%;
     height: 50px;
     box-shadow: 2px 2px 30px -10px hsl(235, 24%, 19%);
-    background-color: rgb(17, 32, 61);
+    background-color: white;
+
     /* Z 1 ensure that it will remain on top whos zindex value less then 1 */
     z-index: 1;
     justify-content: space-between;
@@ -65,7 +66,7 @@ body {
     align-items: flex-start;
     font-size: 1.2rem;
     justify-content: center;
-    color: aqua;
+    color: white;
     text-shadow: 2px -1px 6px hsl(200, 5%, 89%);
     flex-direction: column;
 }
@@ -84,7 +85,7 @@ body {
   #login.text-center.center-div {
     margin-top: -120px;
     margin-right: 100px;
-    color: aqua;
+    color:black;
 
   }
   
@@ -92,12 +93,15 @@ body {
   /* Style the welcome message */
   #login .wrapper h6 {
     font-size: 18px;
-
   }
   
   /* Style the logout button */
   #login .btn.btn-danger {
-    color: #f90b0b;
+    margin-top: -23px;
+    margin-left: 300px;
+    float: right;
+    padding: 5px;
+    color:black;
     cursor: pointer;
   }
 
@@ -136,9 +140,10 @@ body {
 }
 
 .fa-bars {
+    margin-left: 500px;
     width: 50px;
     scale: 1.5;
-    color: hsl(236, 6%, 45%)
+    color: black;
 }
 
 #toggle-sidebar {
@@ -150,12 +155,9 @@ body {
     height: 43px;
     cursor: pointer;
     border-radius: 5px;
+    margin-right: 10px;
 }
 
-#toggle-sidebar:hover {
-    scale: 1.2;
-    transition: all ease-in-out .25s;
-}
 
 .top-logo hr {
     margin-top: 2px;
@@ -171,9 +173,10 @@ body {
 }
 
 #flex-box {
+    margin-left: -150px;
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-gap: 10px;
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
@@ -300,8 +303,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
+   
 }
 
 .container {
@@ -339,7 +341,7 @@ body {
 
 #search-bar {
     width: 60%;
-    background-color: hsla(235, 24%, 19%, 0.308);
+    background-color: white;
     height: 60px;
     margin-top: 50px;
     border-radius: 20px;
@@ -395,12 +397,13 @@ body {
 }
 
 #cards-holder {
+    margin-left: 100px;
+    margin-right: 0px;
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 7fr);
+    grid-gap: 10px;
     margin-top: 75px;
     padding: 0 10px;
 }
