--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,10 +24,9 @@
     
 <!-- navbar area -->
     <div id="navbar">
-        <img src="/static/assets/logo.png" alt="Logo" style="width: 100px; height: 40px;">
+        <img src="/static/assets/logo-removebg-preview.png" alt="Logo" style="width: 100px; height: 40px;">
         <a href="/home.ejs">
-            <div class="top-logo">Foodies App
-            </div>
+            
         </a>
 
 
